The tool now correctly calls adb, via the onebeartoe Commander class, but this needs to change to use the ProcessBuilder class built into Java SE.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <modules>
         <module>html-utility</module>
+        <module>android</module>
     </modules>    
 
     <repositories>
