The serial plotter project was moved from Building Java Applications to here.

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <modules>
         <module>html-utility</module>
         <module>android</module>
+        <module>serial-plotter</module>
     </modules>    
 
     <repositories>
