--- a/serial-plotter/pom.xml
+++ b/serial-plotter/pom.xml
@@ -5,18 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
-        <artifactId>onebeartoe-building-applications-parent</artifactId>
-        <groupId>org.onebeartoe</groupId>
+        <groupId>org.onebeartoe.development.tools</groupId>
+        <artifactId>onebeartoe-development-tools-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.onebeartoe.data.visualization.serial.plotter</groupId>
     <artifactId>serial-plotter</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     
     <packaging>jar</packaging>
 
-    <name>onebeartoe-building-applications-serial-plotter</name>
+    <name>onebeartoe-software-development-tools-serial-plotter</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
