--- a/html-utility/pom.xml
+++ b/html-utility/pom.xml
@@ -28,5 +28,11 @@
             <artifactId>onebeartoe-system</artifactId>  
             <version>1.0-SNAPSHOT</version>            
         </dependency>
+        
+        <dependency>
+            <groupId>org.onebeartoe</groupId>  
+            <artifactId>onebeartoe-web</artifactId>  
+            <version>1.0-SNAPSHOT</version>            
+        </dependency>
     </dependencies>
 </project>
