--- a/web-content-verification/web-content-verification/pom.xml
+++ b/web-content-verification/web-content-verification/pom.xml
@@ -16,11 +16,48 @@
     
     <name>onebeartoe-development-tools-web-content-verification</name>
 
+    <properties>
+        
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>edu.uci.ics</groupId>
             <artifactId>crawler4j</artifactId>
             <version>4.2</version>
         </dependency>
-    </dependencies>      
+        
+        <dependency>
+            <groupId>org.slf4j</groupId> 
+            <artifactId>slf4j-simple</artifactId> 
+            <version>1.7.21</version> 
+        </dependency>
+    </dependencies>
+    
+    <build>
+        <plugins>
+	    <plugin>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<configuration>
+		    <archive>
+			<manifest>
+			    <mainClass>org.onebeartoe.development.tools.web.content.verification.StatusHandlerCrawlController</mainClass>
+			</manifest>
+		    </archive>
+		    <descriptorRefs>
+			<descriptorRef>jar-with-dependencies</descriptorRef>
+		    </descriptorRefs>
+		</configuration>
+		<executions>
+		    <execution>
+			<id>make-assembly</id>   <!-- this is used for inheritance merges -->
+			<phase>package</phase>   <!-- bind to the packaging phase -->
+			<goals>
+			    <goal>single</goal>
+			</goals>
+		    </execution>
+		</executions>
+	    </plugin>
+        </plugins>
+    </build>
 </project>
