--- a/html-utility/pom.xml
+++ b/html-utility/pom.xml
@@ -64,6 +64,30 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jarsigner-plugin</artifactId>
+                <version>1.2</version>
+                <executions>
+                    <execution>
+                        <id>sign</id>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <keystore>
+                        ${keystorePath}
+                    </keystore>
+                    <alias>${keystoreAlias}</alias>
+                    <storepass>${keystorePass}</storepass>
+                    <keypass>${keystorePass}</keypass>
+                    <!--
+                    processAttachedArtifacts>true</processAttachedArtifacts
+                    -->
+                </configuration>
+            </plugin>            
         </plugins>
     </build>    
 </project>
