The curly brackets were removed to try as environment variables.

--- a/html-utility/pom.xml
+++ b/html-utility/pom.xml
@@ -80,7 +80,7 @@
                     <keystore>
                         ${keystorePath}
                     </keystore>
-                    <alias>${keystoreAlias}</alias>
+                    <alias>$keystoreAlias</alias>
                     <storepass>${keystorePass}</storepass>
                     <keypass>${keystorePass}</keypass>
                     <!--
