--- a/android/pom.xml
+++ b/android/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>android</artifactId>
+    <artifactId>android-adb-tool-parent</artifactId>
 
     <packaging>pom</packaging>
 
