The code and configuration was cleaned up a bit.

--- a/serial-plotter/pom.xml
+++ b/serial-plotter/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>org.onebeartoe.data.visualization.serial.plotter.SerialPotter</mainClass>
+        <mainClass>org.onebeartoe.data.visualization.serial.plotter.SerialPlotter</mainClass>
     </properties>
 
     <organization>
