--- a/web-content-verification/web-content-verification/pom.xml
+++ b/web-content-verification/web-content-verification/pom.xml
@@ -17,6 +17,7 @@
     <name>onebeartoe-development-tools-web-content-verification</name>
 
     <properties>
+        <internalLinksSuiteXmlFile>src/main/resources/testng-internal-links.xml</internalLinksSuiteXmlFile>
         <suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile>
     </properties>
     
@@ -42,6 +43,7 @@
     
     <build>
         <plugins>
+<!--            
 	    <plugin>
 		<artifactId>maven-assembly-plugin</artifactId>
 		<configuration>
@@ -56,14 +58,15 @@
 		</configuration>
 		<executions>
 		    <execution>
-			<id>make-assembly</id>   <!-- this is used for inheritance merges -->
-			<phase>package</phase>   <!-- bind to the packaging phase -->
+			<id>make-assembly</id>   
+			<phase>package</phase>   
 			<goals>
 			    <goal>single</goal>
 			</goals>
 		    </execution>
 		</executions>
 	    </plugin>
+-->            
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -71,7 +74,11 @@
                 <version>2.17</version>
                 <configuration>
                     <suiteXmlFiles>
+                        <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
+                        <!--
                         <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                        <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
+                        -->
                     </suiteXmlFiles>
                 </configuration>
             </plugin>            
