More JUnit with Testng configuration was added.

--- a/web-content-verification/web-content-verification/pom.xml
+++ b/web-content-verification/web-content-verification/pom.xml
@@ -81,6 +81,7 @@
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
+                        <suiteXmlFile>testng-for-junit.xml</suiteXmlFile>
                         <!--
                         <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                         <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
