--- a/web-content-verification/web-content-verification/pom.xml
+++ b/web-content-verification/web-content-verification/pom.xml
@@ -49,42 +49,23 @@
     
     <build>
         <plugins>
-<!--            
-	    <plugin>
-		<artifactId>maven-assembly-plugin</artifactId>
-		<configuration>
-		    <archive>
-			<manifest>
-			    <mainClass>org.onebeartoe.development.tools.web.content.verification.StatusHandlerCrawlController</mainClass>
-			</manifest>
-		    </archive>
-		    <descriptorRefs>
-			<descriptorRef>jar-with-dependencies</descriptorRef>
-		    </descriptorRefs>
-		</configuration>
-		<executions>
-		    <execution>
-			<id>make-assembly</id>   
-			<phase>package</phase>   
-			<goals>
-			    <goal>single</goal>
-			</goals>
-		    </execution>
-		</executions>
-	    </plugin>
--->            
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
+  <properties>
+    <property>
+      <name>junit</name>
+      <value>true</value>
+    </property>
+  </properties>               
                     <suiteXmlFiles>
-                        <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
-                        <suiteXmlFile>testng-for-junit.xml</suiteXmlFile>
+                        <suiteXmlFile>src/main/resources/testng-for-junit.xml</suiteXmlFile>
                         <!--
                         <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                         <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
+                        <suiteXmlFile>src/main/resources/testng-for-junit.xml</suiteXmlFile>
                         -->
                     </suiteXmlFiles>
                 </configuration>
