--- a/html-utility/pom.xml
+++ b/html-utility/pom.xml
@@ -64,7 +64,7 @@
                     </execution>
                 </executions>
             </plugin>
-<!--            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jarsigner-plugin</artifactId>
@@ -81,12 +81,11 @@
                     <keystore>
                         ${keystorePath}
                     </keystore>
-                    <alias>duder</alias>
+                    <alias>${keystoreAlias}</alias>
                     <storepass>${keystorePass}</storepass>
                     <keypass>${keystorePass}</keypass>
                 </configuration>
             </plugin>
--->
         </plugins>
-    </build>    
+    </build>
 </project>
