--- a/jar-diff/utils/pom.xml
+++ b/jar-diff/utils/pom.xml
@@ -14,24 +14,79 @@
     
     <packaging>jar</packaging>
 
-    <name>onebeartoe-development-tools-jar-diff</name>
+    <name>onebeartoe-development-tools-jar-diff-utils</name>
 
     <properties>
-
+        <internalLinksSuiteXmlFile>src/test/resources/testng-internal-links.xml</internalLinksSuiteXmlFile>
     </properties>
 
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
-        <name>Your Organisation</name>
+        <name>onebeartoe.org</name>
     </organization>
 
     <dependencies>
-
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
         <plugins>                                    
+            <plugin>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<configuration>
+		    <archive>
+			<manifest>
+			    <mainClass>org.onebeartoe.develoment.tools.jar.diff.JarDiffCli</mainClass>
+			</manifest>
+		    </archive>
+                    
+		    <descriptorRefs>
+			<descriptorRef>jar-with-dependencies</descriptorRef>
+		    </descriptorRefs>
+		</configuration>
+		<executions>
+		    <execution>
+			<id>make-assembly</id>   <!-- this is used for inheritance merges -->
+			<phase>package</phase>   <!-- bind to the packaging phase -->
+			<goals>
+			    <goal>single</goal>
+			</goals>
+		    </execution>
+		</executions>
+	    </plugin>
             
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+<!-- TODO: CAN THIS BE REMOVED? -->                    
+  <properties>
+    <property>
+      <name>junit</name>
+      <value>false</value>
+    </property>
+  </properties>               
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
+                        <!--
+                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                        <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
+                        <suiteXmlFile>src/main/resources/testng-for-junit.xml</suiteXmlFile>
+                        -->
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>            
         </plugins>
     </build>
 </project>
