The onweb.net internal link tests were moved.

--- a/web-content-verification/web-content-verification/pom.xml
+++ b/web-content-verification/web-content-verification/pom.xml
@@ -65,7 +65,7 @@
 </properties>
                     <suiteXmlFiles>
                         <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
-                        
+                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                         <!--
                         <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                         <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
