--- a/web-content-verification/web-content-verification/pom.xml
+++ b/web-content-verification/web-content-verification/pom.xml
@@ -52,28 +52,36 @@
     
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
-<properties>
+
+        </plugins>
+    </build>
+    
+    <profiles>
+        <profile>
+            <id>internal-links</id>
+    
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.17</version>
+                        <configuration>
+                            <properties>
   <property>
     <name>junit</name>
     <value>false</value>
   </property>
-</properties>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
-                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
-                        <!--
-                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
-                        <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
-                        <suiteXmlFile>src/main/resources/testng-for-junit.xml</suiteXmlFile>
-                        -->
-                    </suiteXmlFiles>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+                            </properties>
+                            
+                            <suiteXmlFiles>
+                                <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
+                                <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                            </suiteXmlFiles>
+                        </configuration>
+                    </plugin>                    
+                </plugins>
+            </build>        
+        </profile>
+    </profiles>
 </project>
