--- a/version-control/pom.xml
+++ b/version-control/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>onebeartoe-system</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.1.1</version>
+        </dependency>
     </dependencies>
     
     <build>
