--- a/jar-diff/utils/pom.xml
+++ b/jar-diff/utils/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>utils</artifactId>
+    <artifactId>jar-diff-utils</artifactId>
     
     <packaging>jar</packaging>
 
@@ -53,7 +53,7 @@
 		<configuration>
 		    <archive>
 			<manifest>
-			    <mainClass>org.onebeartoe.develoment.tools.jar.diff.JarDiffCli</mainClass>
+			    <mainClass>org.onebeartoe.develoment.tools.jar.diff.JarDiffette</mainClass>
 			</manifest>
 		    </archive>
                     
