--- a/jar-diff/utils/pom.xml
+++ b/jar-diff/utils/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>org.onebeartoe.development.tools</groupId> 
-        <artifactId>onebeartoe-jar-diff</artifactId>
+        <artifactId>onebeartoe-jar-tools</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
