The parameters were added.

--- a/jar-diff/maven/src/main/resources/dependency-tag.properties
+++ b/jar-diff/maven/src/main/resources/dependency-tag.properties
@@ -5,5 +5,5 @@ dependency.tag= \
             <artifactId>%s</artifactId> \
             <version>0.0</version> \
             <scope>system</scope> \
-            <systemPath>${project.basedir}/WEB-INF/lib/%s</systemPath> \
+            <systemPath>${project.basedir}/%s</systemPath> \
         </dependency> 
