--- a/filesystem/pom.xml
+++ b/filesystem/pom.xml
@@ -21,7 +21,13 @@
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.4</version>
-        </dependency>    
+        </dependency>
+        
+        <dependency>
+            <groupId>org.onebeartoe</groupId>
+            <artifactId>email</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>        
     </dependencies>
     
     <build>
