--- a/jar-diff/maven/pom.xml
+++ b/jar-diff/maven/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>maven</artifactId>
+    <artifactId>maven-tools</artifactId>
 
     <packaging>jar</packaging>
     
@@ -22,4 +22,32 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>        
     </dependencies>
+    
+    <build>
+        <plugins>                                    
+            <plugin>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<configuration>
+		    <archive>
+			<manifest>
+			    <mainClass>org.onebeartoe.maven.system.dependencies.SystemDependenciesFromJarDirectory</mainClass>
+			</manifest>
+		    </archive>
+                    
+		    <descriptorRefs>
+			<descriptorRef>jar-with-dependencies</descriptorRef>
+		    </descriptorRefs>
+		</configuration>
+		<executions>
+		    <execution>
+			<id>make-assembly</id>   <!-- this is used for inheritance merges -->
+			<phase>package</phase>   <!-- bind to the packaging phase -->
+			<goals>
+			    <goal>single</goal>
+			</goals>
+		    </execution>
+		</executions>
+	    </plugin>
+        </plugins>
+    </build>
 </project>
