--- a/jars/diff/pom.xml
+++ b/jars/diff/pom.xml
@@ -5,16 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.onebeartoe.development.tools</groupId> 
+        <groupId>org.onebeartoe.development.tools</groupId>
         <artifactId>onebeartoe-jar-tools</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jar-diff-utils</artifactId>
-    
+    <artifactId>jar-diff</artifactId>
+
     <packaging>jar</packaging>
 
-    <name>onebeartoe-development-tools-jar-diff-utils</name>
+    <name>onebeartoe-development-tools-jar-diff</name>
 
     <properties>
         <internalLinksSuiteXmlFile>src/test/resources/testng-internal-links.xml</internalLinksSuiteXmlFile>
@@ -37,7 +37,7 @@
             <artifactId>email</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -45,9 +45,9 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+
     <build>
-        <plugins>                                    
+        <plugins>
             <plugin>
 		<artifactId>maven-assembly-plugin</artifactId>
 		<configuration>
@@ -56,7 +56,7 @@
 			    <mainClass>org.onebeartoe.develoment.tools.jar.diff.JarDiffette</mainClass>
 			</manifest>
 		    </archive>
-                    
+
 		    <descriptorRefs>
 			<descriptorRef>jar-with-dependencies</descriptorRef>
 		    </descriptorRefs>
@@ -71,19 +71,19 @@
 		    </execution>
 		</executions>
 	    </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
-<!-- TODO: CAN THIS BE REMOVED? -->                    
+<!-- TODO: CAN THIS BE REMOVED? -->
   <properties>
     <property>
       <name>junit</name>
       <value>false</value>
     </property>
-  </properties>               
+  </properties>
                     <suiteXmlFiles>
                         <suiteXmlFile>${internalLinksSuiteXmlFile}</suiteXmlFile>
                         <!--
@@ -93,7 +93,7 @@
                         -->
                     </suiteXmlFiles>
                 </configuration>
-            </plugin>            
+            </plugin>
         </plugins>
     </build>
 </project>
