--- a/jars/sign/pom.xml
+++ b/jars/sign/pom.xml
@@ -6,22 +6,14 @@
 
     <parent>
         <groupId>org.onebeartoe.development.tools</groupId>
-        <artifactId>onebeartoe-development-tools-parent</artifactId>
+        <artifactId>onebeartoe-jar-tools</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>onebeartoe-jar-tools</artifactId>
+    <artifactId>onebeartoe-jar-sign</artifactId>
 
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
-    <properties>
+    <name>onebeartoe-development-tools-jar-sign</name>
 
-    </properties>
-
-    <name>onebeartoe-development-tools-jars</name>
-
-    <modules>
-        <module>diff</module>
-        <module>sign</module>
-    </modules>
 </project>
