--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.onebeartoe.development.tools</groupId>
-        <artifactId>onebeartoe-jar-tools</artifactId>
+	    <groupId>org.onebeartoe.development.tools</groupId>
+	    <artifactId>onebeartoe-development-tools-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>maven-tools</artifactId>
 
-    <packaging>jar</packaging>
-    
+    <packaging>pom</packaging>
+
     <name>onebeartoe-development-tools-maven-jar-utils</name>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.onebeartoe</groupId>
             <artifactId>email</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>        
+        </dependency>
     </dependencies>
-    
+
     <build>
-        <plugins>                                    
+        <plugins>
             <plugin>
 		<artifactId>maven-assembly-plugin</artifactId>
 		<configuration>
@@ -33,7 +34,7 @@
 			    <mainClass>org.onebeartoe.maven.system.dependencies.SystemDependenciesFromJarDirectory</mainClass>
 			</manifest>
 		    </archive>
-                    
+
 		    <descriptorRefs>
 			<descriptorRef>jar-with-dependencies</descriptorRef>
 		    </descriptorRefs>
