--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.onebeartoe.development.tools</groupId>
@@ -21,7 +22,8 @@
         <module>html-utility</module>
         <module>android</module>
         <module>filesystem</module>
-        <module>jar-diff</module>
+        <module>jars</module>
+        <module>maven</module>
         <module>keyboard-shortcuts</module>
         <module>serial-plotter</module>
         <module>version-control</module>
