--- a/web-content-verification/web-content-verification/pom.xml
+++ b/web-content-verification/web-content-verification/pom.xml
@@ -67,6 +67,9 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.17</version>
                         <configuration>
+                            <skipTests>true</skipTests>
+
+                            
                             <properties>
   <property>
     <name>junit</name>
