--- a/web-content-verification/web-content-verification/pom.xml
+++ b/web-content-verification/web-content-verification/pom.xml
@@ -62,7 +62,7 @@
     
             <build>
                 <plugins>
-                    <plugin>
+                    <!--plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.17</version>
@@ -82,7 +82,7 @@
                                 <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                             </suiteXmlFiles>
                         </configuration>
-                    </plugin>                    
+                    </plugin-->                    
                 </plugins>
             </build>        
         </profile>
