--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-	    <groupId>org.onebeartoe.development.tools</groupId>
-	    <artifactId>onebeartoe-development-tools-parent</artifactId>
+        <groupId>org.onebeartoe.development.tools</groupId>
+        <artifactId>onebeartoe-development-tools-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -14,7 +14,11 @@
 
     <packaging>pom</packaging>
 
-    <name>onebeartoe-development-tools-maven-jar-utils</name>
+    <name>onebeartoe-development-tools-maven</name>
+
+    <modules>
+        <module>system-dependencies</module>
+    </modules>
 
     <dependencies>
         <dependency>
