--- a/filesystem/pom.xml
+++ b/filesystem/pom.xml
@@ -12,52 +12,12 @@
 	
     <artifactId>filesystem</artifactId>
     
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     
     <name>onebeartoe-development-tools-filesystem</name>
-    
-    <dependencies>
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.onebeartoe</groupId>
-            <artifactId>email</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>        
-    </dependencies>
-    
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>
-                                org.onebeartoe.filesystem.FilesystemPopulater
-                            </mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <!--  this is used for inheritance merges  -->
-                        <phase>package</phase>
-                        <!--  bind to the packaging phase  -->
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>    
+
+    <modules>
+        <module>duplicates</module>
+        <module>file-types</module>
+    </modules>
 </project>
