--- a/filesystem/duplicates/pom.xml
+++ b/filesystem/duplicates/pom.xml
@@ -27,11 +27,35 @@
             <groupId>org.onebeartoe</groupId>
             <artifactId>email</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>        
+        </dependency>
+        
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <skipTests>false</skipTests>
+
+                    <properties>
+
+                    </properties>
+
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/unit-testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>    
+                        
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
