--- a/jars/diff/pom.xml
+++ b/jars/diff/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.0.0-beta1</version>
+            <version>2.17</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
