--- a/filesystem/file-types/pom.xml
+++ b/filesystem/file-types/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>commons-cli</artifactId>
             <version>1.4</version>
         </dependency>        
+        
+        <dependency>
+            <groupId>org.onebeartoe</groupId>
+            <artifactId>email</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
