--- a/filesystem/duplicates/pom.xml
+++ b/filesystem/duplicates/pom.xml
@@ -22,13 +22,13 @@
             <artifactId>commons-cli</artifactId>
             <version>1.4</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.onebeartoe</groupId>
-            <artifactId>email</artifactId>
+            <artifactId>onebeartoe-application</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
