--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,22 @@
         <repository>
             <id>oss-snapshots-repo</id>
             <name>Sonatype OSS Maven Repository</name>
+            <url>http://onebeartoe.org/maven/2/repository/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>        
+<!--
+        <repository>
+            <id>oss-snapshots-repo</id>
+            <name>Sonatype OSS Maven Repository</name>
             <url>https://repository-onebeartoe.forge.cloudbees.com/snapshot/</url>
             <snapshots>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
             </snapshots>
         </repository>
+-->        
     </repositories>
 </project>
