--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
 
     <repositories>
         <repository>
-            <id>oss-snapshots-repo</id>
-            <name>Sonatype OSS Maven Repository</name>
+            <id>onebeartoe-repo</id>
+            <name>onebeartoe Maven Repository</name>
             <url>http://onebeartoe.org/maven/2/repository/</url>
-        </repository>        
+        </repository>
 <!--
         <repository>
             <id>oss-snapshots-repo</id>
