--- a/filesystem/file-types/pom.xml
+++ b/filesystem/file-types/pom.xml
@@ -23,11 +23,14 @@
             <version>1.4</version>
         </dependency>        
         
+        
         <dependency>
             <groupId>org.onebeartoe</groupId>
-            <artifactId>email</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>onebeartoe-appliation</artifactId>
+            <version>1.0</version>
         </dependency>
+        <!--
+        -->
     </dependencies>
 
     <build>
