--- a/filesystem/file-types/pom.xml
+++ b/filesystem/file-types/pom.xml
@@ -26,7 +26,7 @@
         
         <dependency>
             <groupId>org.onebeartoe</groupId>
-            <artifactId>onebeartoe-appliation</artifactId>
+            <artifactId>onebeartoe-application</artifactId>
             <version>1.0</version>
         </dependency>
         <!--
