This is a move refactor.

--- a/maven/system-dependencies/pom.xml
+++ b/maven/system-dependencies/pom.xml
@@ -19,5 +19,13 @@
     </properties>
 
     <name>onebeartoe-development-tools-system-dependencies</name>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.onebeartoe</groupId>
+            <artifactId>onebeartoe-application</artifactId>
+            <version>1.0</version>
+        </dependency>        
+    </dependencies>    
 </project>
 
