--- a/jars/diff/pom.xml
+++ b/jars/diff/pom.xml
@@ -34,8 +34,8 @@
 
         <dependency>
             <groupId>org.onebeartoe</groupId>
-            <artifactId>email</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>onebeartoe-application</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
