--- a/jars/sign/pom.xml
+++ b/jars/sign/pom.xml
@@ -19,8 +19,8 @@
     <dependencies>
         <dependency>
             <groupId>org.onebeartoe</groupId>
-            <artifactId>email</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>onebeartoe-application</artifactId>
+            <version>1.0</version>
         </dependency>        
     </dependencies>
 
