--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jdk:
   - oraclejdk8
 script:
   - cat $HOME/.m2/settings.xml    
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar --settings settings.xml
 cache:
   directories:
     - '$HOME/.m2/repository'
