--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ addons:
 jdk:
   - oraclejdk8
 script:
-  - cat $HOME/.m2/settings.xml    
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar --settings settings.xml
+  - cat $HOME/.m2/settings.xml
+  - cp  settings.xml $HOME/.m2/settings.xml
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 cache:
   directories:
     - '$HOME/.m2/repository'
