--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ jdk:
 script:
   - cat $HOME/.m2/settings.xml
   - cp  settings.xml $HOME/.m2/settings.xml
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - cat $HOME/.m2/settings.xml
+  - mvn -e clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 cache:
   directories:
     - '$HOME/.m2/repository'
