--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ jdk:
   - oraclejdk8
 script:
   - cat $HOME/.m2/settings.xml
-  - cp  settings.xml $HOME/.m2/settings.xml
-  - cat $HOME/.m2/settings.xml
+#  - cp  settings.xml $HOME/.m2/settings.xml
+#  - cat $HOME/.m2/settings.xml
   - mvn -e clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 cache:
   directories:
