--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ jdk:
   - oraclejdk8
 script:
   - cat $HOME/.m2/settings.xml
+#TODO: revisit this and see if it was just the <releases> that was needed in the projet POM  
+#      this is the stackoverflow question that suggestion overwritting the .m2/settings.xml file.
 #  - cp  settings.xml $HOME/.m2/settings.xml
 #  - cat $HOME/.m2/settings.xml
   - mvn -e clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
