--- a/maven/system-dependencies/pom.xml
+++ b/maven/system-dependencies/pom.xml
@@ -18,7 +18,7 @@
 
     </properties>
 
-    <name>onebeartoe-development-tools-system-dependencies</name>
+    <name>onebeartoe-development-tools-maven-system-dependencies</name>
     
     <dependencies>
         <dependency>
@@ -27,5 +27,33 @@
             <version>1.0</version>
         </dependency>        
     </dependencies>    
+
+    <build>
+        <plugins>
+            <plugin>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<configuration>
+		    <archive>
+			<manifest>
+			    <mainClass>org.onebeartoe.maven.system.dependencies.SystemDependenciesFromJarDirectory</mainClass>
+			</manifest>
+		    </archive>
+
+		    <descriptorRefs>
+			<descriptorRef>jar-with-dependencies</descriptorRef>
+		    </descriptorRefs>
+		</configuration>
+		<executions>
+		    <execution>
+			<id>make-assembly</id>   <!-- this is used for inheritance merges -->
+			<phase>package</phase>   <!-- bind to the packaging phase -->
+			<goals>
+			    <goal>single</goal>
+			</goals>
+		    </execution>
+		</executions>
+	    </plugin>
+        </plugins>
+    </build>
 </project>
 
