The whitespace was formatted.

--- a/maven/system-dependencies/src/main/resources/dependency-tag.properties
+++ b/maven/system-dependencies/src/main/resources/dependency-tag.properties
@@ -1,9 +1,9 @@
 
 dependency.tag= \
-        <dependency> \
-            <groupId>org.untrackable</groupId> \
-            <artifactId>%s</artifactId> \
-            <version>0.0</version> \
-            <scope>system</scope> \
-            <systemPath>${project.basedir}/%s</systemPath> \
-        </dependency> 
+\t<dependency> \
+\n\t\t<groupId>org.untrackable</groupId> \
+\n\t\t<artifactId>%s</artifactId> \
+\n\t\t<version>0.0</version> \
+\n\t\t<scope>system</scope> \
+\n\t\t<systemPath>${project.basedir}/%s</systemPath> \
+\n\t</dependency>
