This is a move refactor.

--- a/filesystem/pom.xml
+++ b/filesystem/pom.xml
@@ -20,5 +20,6 @@
         <module>duplicates</module>
         <module>file-types</module>
         <module>files-diff</module>
+        <module>populator</module>
     </modules>
 </project>
