--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,9 @@
             <id>onebeartoe-repo</id>
             <name>onebeartoe Maven Repository</name>
             <url>http://onebeartoe.org/maven/2/repository/</url>
+            <releases>
+                <updatePolicy>always</updatePolicy>
+            </releases>
         </repository>
     </repositories>
 </project>
