This is a rename refactor.

--- a/filesystem/file-types/pom.xml
+++ b/filesystem/file-types/pom.xml
@@ -58,7 +58,7 @@
                     <archive>
                         <manifest>
                             <mainClass>
-                                org.onebeartoe.file.types.FileTypes
+                                org.onebeartoe.file.types.FileTypesApplet
                             </mainClass>
                         </manifest>
                     </archive>
