configure the Jacoco plugin

--- a/pom.xml
+++ b/pom.xml
@@ -43,4 +43,31 @@
             </releases>
         </repository>
     </repositories>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <!-- For usage in the Netbeans IDE see this link
+                            https://blogs.oracle.com/geertjan/jacoco,-maven,-and-netbeans 
+                -->
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
