--- a/filesystem/watcher/command-line/java-watcher.properties
+++ b/filesystem/watcher/command-line/java-watcher.properties
@@ -1,7 +1,5 @@
 
-
-
 pattern1=*.java
-#command1=mvn test
-command1=mvn verify
-quietPeriod1=1-minute
+command1=mvn clean test
+#command1=mvn verify
+quietPeriod1=30-seconds
