--- a/filesystem/file-types/pom.xml
+++ b/filesystem/file-types/pom.xml
@@ -29,8 +29,11 @@
             <artifactId>onebeartoe-application</artifactId>
             <version>1.0</version>
         </dependency>
-        <!--
-        -->
+        
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
