--- a/jars/sign/pom.xml
+++ b/jars/sign/pom.xml
@@ -21,7 +21,12 @@
             <groupId>org.onebeartoe</groupId>
             <artifactId>onebeartoe-application</artifactId>
             <version>1.0</version>
-        </dependency>        
+        </dependency>
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
