--- a/serial-plotter/pom.xml
+++ b/serial-plotter/pom.xml
@@ -34,6 +34,12 @@
         </dependency>
         
         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>13</version>
+        </dependency>        
+        
+        <dependency>
             <groupId>org.rxtx</groupId>
             <artifactId>rxtx</artifactId>
             <version>2.1.7</version>
