add the initial code for the sasquatch sightings

--- a/data-visualization/pom.xml
+++ b/data-visualization/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>titanic-statistics</module>
         <module>titanic-fx-view</module>
+        <module>sasquatch</module>
     </modules>
     <name>onebeartoe-development-tools-data-visualization</name>
 </project>
